z-index fixed for popover menu

--- a/client/src/components/DropdownMenu.module.css
+++ b/client/src/components/DropdownMenu.module.css
@@ -9,7 +9,7 @@
     box-shadow: 1px 1px 6px 2px rgba(0,0,0,0.15);
     width: 375px;
     height: 408px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .dropdown__invisible {
