--- a/client/src/components/MainMenu.module.css
+++ b/client/src/components/MainMenu.module.css
@@ -5,6 +5,7 @@
     display: flex;
     padding: 0 9px;
     flex-direction: column;
+    z-index: -1;
 }
 
 .mainMenu__buttons {
