--- a/client/src/pages/Popover.module.css
+++ b/client/src/pages/Popover.module.css
@@ -29,6 +29,7 @@
   top: 12px;
   background-color: white;
   color: hsl(0, 0%, 17%);
+  z-index: 4;
 }
 
 .popover__background {
